--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,30 @@ spring.datasource.password=root_default
 
 # Mail config properties
 spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
 spring.mail.username=xzraffles@gmail.com
 spring.mail.password=cyupntliaerjxizq
-spring.mail.properties.mail.smtp.port=587
 spring.mail.properties.mail.from=xzraffles@gmail.com
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.port=465
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.default-encoding=utf-8
+
+# JPA config
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Logging config
+logging.file.name=/Users/xinzhe/desktop/log/console.log
+logging.level.com.example.demo=error
+logging.level.com.example.demo.dao=info
+logging.level.com.example.demo.service=info
+logging.level.com.example.demo.control=info
+
+server.port=8080
+server.servlet.context-path=/demo
