--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 # DB config properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
-spring.datasource.username=root
-spring.datasource.password=root_default
+spring.datasource.url=jdbc:mysql://localhost:3306/{db_name}
+spring.datasource.username={db_username}
+spring.datasource.password={db_password}
 
 # Mail config properties
 spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-spring.mail.username=xzraffles@gmail.com
-spring.mail.password=cyupntliaerjxizq
-spring.mail.properties.mail.from=xzraffles@gmail.com
+spring.mail.username={username}
+spring.mail.password={password}
+spring.mail.properties.mail.from={email_address}
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.port=465
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -25,7 +24,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Logging config
-logging.file.name=/Users/xinzhe/desktop/log/console.log
+logging.file.name={path}
 logging.level.com.example.demo=error
 logging.level.com.example.demo.dao=info
 logging.level.com.example.demo.service=info
