--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ logging.level.com.example.demo.control=info
 
 server.port=8080
 server.servlet.context-path=/demo
+
+audience.clientId={client_id}
+audience.base64Secret={secret}
+audience.name={name}
+audience.expiresSecond=1800000
