--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,13 +25,13 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # Logging config
 logging.file.name={path}
-logging.level.com.example.demo=error
-logging.level.com.example.demo.dao=info
-logging.level.com.example.demo.service=info
-logging.level.com.example.demo.control=info
+logging.level.com.example.userCenter=error
+logging.level.com.example.userCenter.dao=info
+logging.level.com.example.userCenter.service=info
+logging.level.com.example.userCenter.control=info
 
 server.port=8080
-server.servlet.context-path=/demo
+server.servlet.context-path=/user-center
 
 audience.clientId={client_id}
 audience.base64Secret={secret}
